Source/WebCore: <rdar://problem/12005188> REGRESSION (Safari 5.1 - 6): Cannot correctly display Traditional Mongolian Script https://bugs.webkit.org/show_bug.cgi?id=92864

Reviewed by Sam Weinig.

Test: platform/mac/fast/text/combining-character-sequence-vertical.html

* platform/graphics/SimpleFontData.cpp:
(WebCore::SimpleFontData::glyphForCharacter): Added this helper function.
* platform/graphics/SimpleFontData.h:
(SimpleFontData): Declared glyphDataForCharacter.
* platform/graphics/mac/FontComplexTextMac.cpp:
(WebCore::Font::fontDataForCombiningCharacterSequence): Added logic to use the appropriate
variant of each font in the fallback list, which mimcs the equivalent logic in
glyphDataAndPageForCharacter().

LayoutTests: REGRESSION (Safari 5.1 - 6): Cannot correctly display Traditional Mongolian Script
https://bugs.webkit.org/show_bug.cgi?id=92864

Reviewed by Sam Weinig.

* platform/mac/fast/text/combining-character-sequence-vertical-expected.html: Added.
* platform/mac/fast/text/combining-character-sequence-vertical.html: Added.



Canonical link: https://commits.webkit.org/111000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124654 268f45cc-cd09-0410-ab3c-d52691b4dbfc