Source/WebCore/platform/graphics/SimpleFontData.h
@@ -153,6 +153,8 @@ public:
     virtual const SimpleFontData* fontDataForCharacter(UChar32) const;
     virtual bool containsCharacters(const UChar*, int length) const;
 
+    Glyph glyphForCharacter(UChar32) const;
+
     void determinePitch();
     Pitch pitch() const { return m_treatAsFixedPitch ? FixedPitch : VariablePitch; }
 
